<resources>
    <string name="app_name">ContactsApp</string>
    <string name="action_settings">Settings</string>
    <string name="customers">Clientes</string>
    <string name="load_more">Cargar Más</string>
    <string name="sort_by">Ordenar por:</string>
    <string name="filter_by">Filtrar por:</string>
    <string name="age">Edad</string>
    <string name="surname">Apellido</string>
    <string name="by_default">Por defecto</string>
    <string name="none">Ninguno</string>
    <string name="female">Femenino</string>
    <string name="male">Masculino</string>
    <string name="apply">Aplicar</string>
    <string name="not_found_data_of_contacts">No se encontraron contactos</string>
    <string name="save_image">Guardar imagen</string>
    <string name="question_save_image"> ¿Desea guardar la imagen en el dispositivo?</string>
    <string name="accept">Aceptar</string>
    <string name="cancel">Cancelar</string>
    <string name="without_permission"> No se han otorgado los permisos necesarios</string>
    <string name="image_saved_correct">Imagen guardada correctamente</string>
    <string name="not_found_app_email">No se encontró ninguna aplicación de correo electrónico instalada</string>
    <string name="error_save_image"> Error al guardar la imagen</string>
    <string name="contact_details"> Contact Details</string>
    <string name="message_email"> Hi, we sharing the contact details with you.</string>
</resources>