<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
android:layout_width="match_parent"
android:layout_height="wrap_content"
    android:background="@color/cream"
android:padding="16dp">

<com.google.android.material.textview.MaterialTextView
    android:id="@+id/filterTitle"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/filter_by"
    android:textAppearance="?attr/textAppearanceHeadline6"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent" />

<com.google.android.material.radiobutton.MaterialRadioButton
    android:id="@+id/femaleRadioButton"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/female"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/filterTitle" />

<com.google.android.material.radiobutton.MaterialRadioButton
    android:id="@+id/maleRadioButton"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/male"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/femaleRadioButton" />

<com.google.android.material.radiobutton.MaterialRadioButton
    android:id="@+id/noneRadioButton"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/none"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/maleRadioButton" />

<com.google.android.material.button.MaterialButton
    android:id="@+id/applyFilterButton"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/apply"
    android:backgroundTint="@color/dark_brown"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/noneRadioButton" />

</androidx.constraintlayout.widget.ConstraintLayout>
