<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/cream"
    android:padding="16dp">

<com.google.android.material.textview.MaterialTextView
    android:id="@+id/sortTitle"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/sort_by"
    android:textAppearance="?attr/textAppearanceHeadline6"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent" />

<com.google.android.material.radiobutton.MaterialRadioButton
    android:id="@+id/ageRadioButton"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/age"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/sortTitle" />

<com.google.android.material.radiobutton.MaterialRadioButton
    android:id="@+id/surnameRadioButton"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/surname"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/ageRadioButton" />

<com.google.android.material.radiobutton.MaterialRadioButton
    android:id="@+id/byDefaultRadioButton"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/by_default"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/surnameRadioButton" />

<com.google.android.material.button.MaterialButton
    android:id="@+id/applyFilterButton"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/apply"
    android:textColor="@color/white"
    android:backgroundTint="@color/dark_brown"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/byDefaultRadioButton" />

</androidx.constraintlayout.widget.ConstraintLayout>
